// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NodeList component renders a node 1`] = `
<ul
  className="compatibility-node-list"
>
  <NodeItem
    node={
      Object {
        "actorID": "test-actor",
        "attributes": Array [],
        "nodeName": "test-element",
        "nodeType": 1,
      }
    }
  />
</ul>
`;

exports[`NodeList component renders some nodes 1`] = `
<ul
  className="compatibility-node-list"
>
  <NodeItem
    node={
      Object {
        "actorID": "test-actor-1",
        "attributes": Array [],
        "nodeName": "test-element-1",
        "nodeType": 1,
      }
    }
  />
  <NodeItem
    node={
      Object {
        "actorID": "test-actor-2",
        "attributes": Array [],
        "nodeName": "test-element-2",
        "nodeType": 1,
      }
    }
  />
</ul>
`;
